[package]
name = "afterglow"
version = "0.1.0"
edition = "2021"
default-run = "afterglow-debug"

[[bin]]
name = "afterglow-debug"
path = "src/main.rs"
required-features = ["debug"]

[[bin]]
name = "afterglow"
path = "src/afterglow.rs"
bench = false
doc = false
required-features = ["rpi"]

[dependencies]
dialoguer = "0.10.2"
lazycell = "1.3.0"
minifb = { version = "0.24.0", optional = true }
nokhwa = { version = "0.10.3", features = ["input-v4l", "input-msmf", "input-avfoundation"] }
rayon = "1.5.3"
rppal = { version = "0.14.1", optional = true }

[features]
default = ["debug", "rpi"]
debug = ["minifb"]
rpi = ["rppal"]
