[package]
name = "afterglow"
version = "0.1.0"
edition = "2021"
default-run = "afterglow-debug"

[[bin]]
name = "afterglow-debug"
path = "src/main.rs"
required-features = ["debug"]

[[bin]]
name = "afterglow"
path = "src/afterglow.rs"
bench = false
doc = false
required-features = ["rpi"]

[dependencies]
dialoguer = "0.11.0"
lazycell = "1.3.0"
minifb = { version = "0.27.0", optional = true }
nokhwa = { git = "https://github.com/DarkAce65/nokhwa.git", branch = "0.10", features = ["input-native", "output-threaded"] }
rayon = "1.5.3"
rppal = { version = "0.18.0", optional = true }

[features]
default = ["debug", "rpi"]
debug = ["minifb"]
rpi = ["rppal"]
